@@ -16,6 +16,8 @@ import java.util.Iterator;
 import java.util.List;
 import java.util.Set;
 
+import junit.framework.TestCase;
+
 import org.eclipse.jface.text.Document;
 import org.eclipse.jface.text.IDocument;
 import org.eclipse.linuxtools.cdt.autotools.ui.editors.parser.AutoconfElement;
@@ -25,10 +27,6 @@ import org.eclipse.linuxtools.cdt.autotools.ui.editors.parser.AutoconfParser;
 import org.eclipse.linuxtools.cdt.autotools.ui.editors.parser.IAutoconfErrorHandler;
 import org.eclipse.linuxtools.cdt.autotools.ui.editors.parser.IAutoconfMacroValidator;
 import org.eclipse.linuxtools.cdt.autotools.ui.editors.parser.ParseException;
-import org.eclipse.linuxtools.internal.cdt.autotools.core.AutotoolsPropertyConstants;
-
-
-import junit.framework.TestCase;
 
 public abstract class BaseParserTest extends TestCase {
 
@@ -88,7 +86,7 @@ public abstract class BaseParserTest extends TestCase {
 	 */
 	protected AutoconfElement parseNoHandlers(IDocument document) {
 		AutoconfParser parser = new AutoconfParser(null, null, null);
-		AutoconfElement root = parser.parse(document, AutotoolsPropertyConstants.AC_VERSION_2_59);
+		AutoconfElement root = parser.parse(document);
 		assertNotNull(root);
 		return root;
 	}
@@ -106,7 +104,7 @@ public abstract class BaseParserTest extends TestCase {
 		errors.clear();
 		macroNames.clear();
 		
-		AutoconfElement root = parser.parse(document, AutotoolsPropertyConstants.AC_VERSION_2_59);
+		AutoconfElement root = parser.parse(document);
 		assertNotNull(root);
 		return root;
 	}
